implementation/infrastructure/simulation/nginx/ingress-ticket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "140"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ticket.tugas-akhir.local
    secretName: app-tls-secret
  rules:
  - host: ticket.tugas-akhir.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ticket-service
            port:
              number: 3000
